# mancala

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.jsx  App.tsx  global.d.ts  index.css  main.tsx
client/src/components/FlagButton/: FlagButton.tsx
client/src/components/ProcessButton/: ProcessButton.css  ProcessButton.tsx
client/src/components/loading/: LoadingDots.css  LoadingDots.tsx
client/src/components/simulationResultDialog/: SimulationResultDialog.css  SimulationResultDialog.tsx
client/src/enums/: enums.ts  mancala.enums.ts
client/src/lib/: requests.ts
client/src/models/: CJFGame.js  history.ts  mancalaGame.model.ts  mancalaGame.ts
client/src/modules/CJF/: CJFBoard.jsx
client/src/modules/Mancala/: MancalaBoard.css  MancalaBoard.tsx  MancalaKeyBinds.ts  MancalaTable.css  (+1 more)
client/src/types/: mancala.types.ts  types.ts
client/src/utils/: constants.ts  requestExecutor.ts  routes.ts
common/: Pasta1.xlsx  constants.ts  package.json  routes.ts  types.ts
common/models/: history.ts  mancalaGame.model.ts
common/types/: mancala.types.ts
rustServer/: Cargo.toml  notes.txt
rustServer/src/: api_doc.rs  constants.rs  error.rs  main.rs  mancala_controller.rs  mancala_game_codec.rs  mancala_game_data_handler.rs  mancala_game_model.rs  routes.rs  types.rs
server/: app.ts
server/controllers/: mancalaGame.controller.ts  userController.ts
server/data/: users.json
server/models/: userModel.js
server/routes/: mancalaGameRoutes.ts  userRoutes.ts
(+1 files in other folders)
