[package]
name = "rustServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
server = "0.0.0"
hyper = "1.7.0"
